# VOXAI

./: .gitignore  pyproject.toml
config/: default.toml
docs/: configuration.md  plugin-system.md
src/voxai_studio/core/: __init__.py  config.py  errors.py  logging.py  paths.py  types.py
src/voxai_studio/plugins/: __init__.py  base.py  discovery.py  exceptions.py  manager.py  registry.py
tests/unit/: test_config_manager.py  test_logger_manager.py  test_plugin_framework.py
